Use POMs directly from uberfire to reduce maintenance efforts
 * ip-bom is used in uberfire, so when upgrading we only
   need changes there and not in this repo
 * both uf and uf-ext are always released together, so it
   is fine that they uf-ext depends on SNAPSHOTs of uf